--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "homepage": "https://github.com/rezasohrabi/YupYup#readme",
   "dependencies": {
     "express": "^4.18.2",
+    "helmet": "^6.0.1",
     "joi": "^17.8.3"
   },
   "devDependencies": {
