--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
   "dependencies": {
     "express": "^4.18.2",
     "helmet": "^6.0.1",
-    "joi": "^17.8.3"
+    "joi": "^17.8.3",
+    "morgan": "^1.10.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.20"
