--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "cross-env NODE_ENV=development nodemon index.js",
+    "dev": "cross-env NODE_ENV=development DEBUG=app:* nodemon index.js",
     "start": "cross-env NODE_ENV=production nodemon index.js"
   },
   "repository": {
@@ -19,6 +19,7 @@
   "homepage": "https://github.com/rezasohrabi/YupYup#readme",
   "dependencies": {
     "config": "^3.3.9",
+    "debug": "^4.3.4",
     "express": "^4.18.2",
     "helmet": "^6.0.1",
     "joi": "^17.8.3",
