--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "express": "^4.18.2",
     "helmet": "^6.0.1",
     "joi": "^17.8.3",
-    "morgan": "^1.10.0"
+    "morgan": "^1.10.0",
+    "pug": "^3.0.2"
   },
   "devDependencies": {
     "cross-env": "^7.0.3",
