--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "dev": "cross-env NODE_ENV=development DEBUG=app:* nodemon index.js",
-    "start": "cross-env NODE_ENV=production nodemon index.js"
+    "start": "cross-env NODE_ENV=production DEBUG=app:* nodemon index.js"
   },
   "repository": {
     "type": "git",
