--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "express": "^4.18.2",
     "helmet": "^6.0.1",
     "joi": "^17.8.3",
+    "mongoose": "^7.4.2",
     "morgan": "^1.10.0",
     "pug": "^3.0.2"
   },
